update tsconfid and package.json. add next-env.d.ts file.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nsfwjs": "^2.6.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "swr": "^2.2.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
